--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "homepage": "http://erick0510.github.io/apellido_gitpages/build",
+  "homepage": "https://erick0510.github.io/meraz_gitpages/build",
   "name": "meraz_gitpages",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
