--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://erick0510.github.io/meraz_gitpages/build",
+  
+  "homepage": "https://rococo-babka-5aa2e7.netlify.app",
   "name": "meraz_gitpages",
   "version": "0.1.0",
   "private": true,
